# storeSpy

./: .gitignore  .pre-commit-config.yaml  .trivyignore  README.md  code_style.md  design-tokens.md  glm5.2-srs-tdd.md  gml5turbo-srs-tdd.md  go.work  go.work.sum  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rip-execution-plan.md  turbo.json  ui-skills.md
.github/workflows/: build-push.yml  ci-foundation.yml  cv-golden.yml  schema-registry.yml  security-scan.yml
apps/portal/: README.md  (+4 more)
docs/: ui-skills-manifest.md
scripts/: apply-debezium-connector.ps1  external-secrets.hcl  msk-provision-topics.ps1  phase0-deploy-platform.ps1  phase1-deploy-platform.ps1  run-edge-dev-pipeline.ps1  run-edge-pipeline.ps1  run-rds-migrations.ps1  vault-bootstrap.ps1  vault-database-bootstrap.ps1
services/edge/cv-orchestrator/: README.md  pyproject.toml
services/edge/cv-orchestrator/orchestrator/: config.py  main.py
services/edge/cv-orchestrator/orchestrator/detection/: mock.py
services/edge/cv-orchestrator/orchestrator/golden/: validate.py
services/edge/cv-orchestrator/orchestrator/interaction/: product_fsm.py  temporal_filter.py
services/edge/cv-orchestrator/orchestrator/pipeline/: runner.py
services/edge/cv-orchestrator/orchestrator/sampling/: fsm.py
services/edge/cv-orchestrator/orchestrator/spatial/: calibration_loader.py  homography.py  project.py
services/edge/cv-orchestrator/orchestrator/tracking/: simple_tracker.py
services/edge/cv-orchestrator/tests/: test_fsm.py  test_homography.py  test_pipeline.py  test_temporal_filter.py  test_tracker.py
(+147 files in other folders)
