[project]
name = "cv-orchestrator"
version = "0.1.0"
description = "RIP edge CV pipeline orchestrator (cloud dev path)"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
